@@ -2,7 +2,8 @@
 2007-xx-xx:
 	* version 0.6
 	* THIS VERSION ONLY WORKS WITH FIREFOX 3.0
-        * added new :mkvimperatorc command
+	* options are no longer stored in preferences - use the RC file instead
+	* added new :mkvimperatorc command
 	* you can edit textfields with Ctrl-i now using an external editor (thanks to Joseph Xu)
 	* :open, :bmarks, etc. filter on space separated tokens now, so you can
 	  search with :open linux windows &lt;tab&gt; all your bookmarks/history
@@ -43,7 +44,7 @@
 	* added 'visualbellstyle' for styling/hiding the visual bell
 	* merge the existing status bar with the standard FF status bar so that
 	  security information and extension buttons are included
-  	* :buffer partial_string works now as in vim, and with ! even better
+	* :buffer partial_string works now as in vim, and with ! even better
 	* new :time command for profiling
 	* added new :sidebar and :sbclose commands
 	* added 'more' and standard more-prompt key mappings to control
